Check for connection being valid rather than looking at the connection status before calling monitor presence.

There are times when connectionStatus is Connected, but account->connection() returns 0.
Converted code to call monitorPresence when connectionChanges() not connectionStatusChanges.

Also updated monitorPresence to take a connectionPtr rather than accountPtr as it makes the code easier with this new change.

REVIEW: 101288
BUG: 271943